// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App renders correctly 1`] = `
<div
  className="App"
>
  <div>
    <nav
      className="px-5 navbar navbar-expand-lg navbar-light bg-white"
    >
      <a
        className="fs-2 fw-medium navbar-brand"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="planet log"
          height={55}
          src="planet.png"
          width={55}
        />
          
        Space Traveler's Hub
      </a>
      <button
        aria-controls="basic-navbar-nav "
        aria-label="Toggle navigation"
        className="navbar-toggler collapsed"
        onClick={[Function]}
        type="button"
      >
        <span
          className="navbar-toggler-icon"
        />
      </button>
      <div
        aria-expanded={null}
        className="justify-content-end navbar-collapse collapse"
        id="basic-navbar-nav"
      >
        <div
          className="text-primary fs-5 navbar-nav"
          onKeyDown={[Function]}
        >
          <a
            className="text-primary pe-5 nav-link"
            data-rr-ui-event-key={null}
            disabled={false}
            href="/"
            onClick={[Function]}
          >
            Rockets
          </a>
          <a
            className="text-primary nav-link"
            data-rr-ui-event-key={null}
            disabled={false}
            href="/missions"
            onClick={[Function]}
          >
            Missions
          </a>
          <div
            className="d-none d-md-none d-lg-block mt-3 mb-3 vr"
          />
          <a
            className="text-primary nav-link"
            data-rr-ui-event-key={null}
            disabled={false}
            href="/myprofile"
            onClick={[Function]}
          >
            My profile
          </a>
        </div>
      </div>
    </nav>
    <hr />
  </div>
</div>
`;

exports[`Missons page renders correctly 1`] = `
<div
  className="px-5 pr-5"
>
  <table
    className="table table-striped table-bordered table-hover"
  >
    <thead>
      <tr>
        <th>
          Mission
        </th>
        <th>
          Description
        </th>
        <th>
          Status
        </th>
        <th />
      </tr>
    </thead>
    <tbody />
  </table>
</div>
`;

exports[`MyProfile page renders correctly 1`] = `
<div
  className="px-2 pr-2"
>
  <div
    className="row"
  >
    <div
      className="ps-lg-5 col-lg-6 col-md-6 col-sm-12"
    >
      <h2>
        My Missions
      </h2>
      <div
        className="list-group"
        onKeyDown={[Function]}
      />
    </div>
    <div
      className="pe-lg-5 col-lg-6 col-md-6 col-sm-12"
    >
      <h2>
        My Rockets
      </h2>
      <div
        className="list-group"
        onKeyDown={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`MyProfile page renders correctly 2`] = `
Array [
  <ul
    className="container-fluid mb-4"
  >
    <li
      className="rocket row"
    >
      <img
        alt="rocket"
        className="col-lg-3 col-md-5 col-12"
        src={
          Array [
            "https://imgur.com/DaCfMsj.jpg",
            "https://imgur.com/azYafd8.jpg",
          ]
        }
      />
      <div
        className="rocket-details col-lg-9 col-md-7 col-12"
      >
        <h2>
          Falcon 1
        </h2>
        <p>
          <span
            className="badge bg-secondary"
          />
          The Falcon 1 was an expendable launch system privately developed and manufactured by SpaceX during 2006-2009. On 28 September 2008, Falcon 1 became the first privately-developed liquid-fuel launch vehicle to go into orbit around the Earth.
        </p>
        <button
          className="btn btn-btn btn-primary btn-md"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Reserve Rocket
        </button>
      </div>
    </li>
  </ul>,
  <ul
    className="container-fluid mb-4"
  >
    <li
      className="rocket row"
    >
      <img
        alt="rocket"
        className="col-lg-3 col-md-5 col-12"
        src={
          Array [
            "https://farm1.staticflickr.com/929/28787338307_3453a11a77_b.jpg",
            "https://farm4.staticflickr.com/3955/32915197674_eee74d81bb_b.jpg",
            "https://farm1.staticflickr.com/293/32312415025_6841e30bf1_b.jpg",
            "https://farm1.staticflickr.com/623/23660653516_5b6cb301d1_b.jpg",
            "https://farm6.staticflickr.com/5518/31579784413_d853331601_b.jpg",
            "https://farm1.staticflickr.com/745/32394687645_a9c54a34ef_b.jpg",
          ]
        }
      />
      <div
        className="rocket-details col-lg-9 col-md-7 col-12"
      >
        <h2>
          Falcon 9
        </h2>
        <p>
          <span
            className="badge bg-secondary"
          />
          Falcon 9 is a two-stage rocket designed and manufactured by SpaceX for the reliable and safe transport of satellites and the Dragon spacecraft into orbit.
        </p>
        <button
          className="btn btn-btn btn-primary btn-md"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Reserve Rocket
        </button>
      </div>
    </li>
  </ul>,
  <ul
    className="container-fluid mb-4"
  >
    <li
      className="rocket row"
    >
      <img
        alt="rocket"
        className="col-lg-3 col-md-5 col-12"
        src={
          Array [
            "https://farm5.staticflickr.com/4599/38583829295_581f34dd84_b.jpg",
            "https://farm5.staticflickr.com/4645/38583830575_3f0f7215e6_b.jpg",
            "https://farm5.staticflickr.com/4696/40126460511_b15bf84c85_b.jpg",
            "https://farm5.staticflickr.com/4711/40126461411_aabc643fd8_b.jpg",
          ]
        }
      />
      <div
        className="rocket-details col-lg-9 col-md-7 col-12"
      >
        <h2>
          Falcon Heavy
        </h2>
        <p>
          <span
            className="badge bg-secondary"
          />
          With the ability to lift into orbit over 54 metric tons (119,000 lb)--a mass equivalent to a 737 jetliner loaded with passengers, crew, luggage and fuel--Falcon Heavy can lift more than twice the payload of the next closest operational vehicle, the Delta IV Heavy, at one-third the cost.
        </p>
        <button
          className="btn btn-btn btn-primary btn-md"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Reserve Rocket
        </button>
      </div>
    </li>
  </ul>,
  <ul
    className="container-fluid mb-4"
  >
    <li
      className="rocket row"
    >
      <img
        alt="rocket"
        className="col-lg-3 col-md-5 col-12"
        src={
          Array [
            "https://live.staticflickr.com/65535/48954138962_ee541e6755_b.jpg",
            "https://live.staticflickr.com/65535/48953946911_e60c5bcc5c_b.jpg",
            "https://live.staticflickr.com/65535/48954138922_9c42173f08_b.jpg",
            "https://live.staticflickr.com/65535/48953947006_313f01ec93_b.jpg",
          ]
        }
      />
      <div
        className="rocket-details col-lg-9 col-md-7 col-12"
      >
        <h2>
          Starship
        </h2>
        <p>
          <span
            className="badge bg-secondary"
          />
          Starship and Super Heavy Rocket represent a fully reusable transportation system designed to service all Earth orbit needs as well as the Moon and Mars. This two-stage vehicle — composed of the Super Heavy rocket (booster) and Starship (ship) — will eventually replace Falcon 9, Falcon Heavy and Dragon.
        </p>
        <button
          className="btn btn-btn btn-primary btn-md"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Reserve Rocket
        </button>
      </div>
    </li>
  </ul>,
]
`;

exports[`NavBar page renders correctly 1`] = `
<div>
  <nav
    className="px-5 navbar navbar-expand-lg navbar-light bg-white"
  >
    <a
      className="fs-2 fw-medium navbar-brand"
      href="/"
      onClick={[Function]}
    >
      <img
        alt="planet log"
        height={55}
        src="planet.png"
        width={55}
      />
        
      Space Traveler's Hub
    </a>
    <button
      aria-controls="basic-navbar-nav "
      aria-label="Toggle navigation"
      className="navbar-toggler collapsed"
      onClick={[Function]}
      type="button"
    >
      <span
        className="navbar-toggler-icon"
      />
    </button>
    <div
      aria-expanded={null}
      className="justify-content-end navbar-collapse collapse"
      id="basic-navbar-nav"
    >
      <div
        className="text-primary fs-5 navbar-nav"
        onKeyDown={[Function]}
      >
        <a
          className="text-primary pe-5 nav-link"
          data-rr-ui-event-key={null}
          disabled={false}
          href="/"
          onClick={[Function]}
        >
          Rockets
        </a>
        <a
          className="text-primary nav-link"
          data-rr-ui-event-key={null}
          disabled={false}
          href="/missions"
          onClick={[Function]}
        >
          Missions
        </a>
        <div
          className="d-none d-md-none d-lg-block mt-3 mb-3 vr"
        />
        <a
          className="text-primary nav-link"
          data-rr-ui-event-key={null}
          disabled={false}
          href="/myprofile"
          onClick={[Function]}
        >
          My profile
        </a>
      </div>
    </div>
  </nav>
  <hr />
</div>
`;
